force-app/main/default/objects/Retail_Number__c/Retail_Number__c.object-meta.xml
<CustomObject>
    <label>Daily Sales</label>
    <nameField>
        <displayFormat>RN-{YYYY}{MM}{DD}{00000000}</displayFormat>
        <label>零售业绩编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>