force-app/main/default/objects/Retail_Number__c/fields/Base_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Date__c</fullName>
    <formula>ReportDate__c - 28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Date</label>
    <type>Date</type>
</CustomField>