force-app/main/default/objects/Retail_Number__c/fields/Change_Daily_Sales_History__c.field-meta.xml
<CustomField>
    <fullName>Change_Daily_Sales_History__c</fullName>
    <label>*Change Daily Sales History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>