force-app/main/default/objects/Retail_Number__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <formula>Customer__r.Customer_Management_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Name</label>
    <type>Text</type>
</CustomField>