force-app/main/default/objects/Retail_Number__c/fields/Created_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <label>Created Email</label>
    <type>Text</type>
</CustomField>