force-app/main/default/objects/Retail_Number__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <formula>IF( ISBLANK( Shop__c ),

CASE(Customer__r.SAP_Customer_Code__c,
&apos;0000510468&apos;, IF(LEFT(Shop_Code_Upload__c , 2) = &apos;XP&apos;, &apos;展会&apos;, IF(LEFT(Shop_Code_Upload__c , 3) = &apos;S88&apos; , &apos;线上&apos;, &apos;其他&apos;)) ,
&apos;0000507684&apos;, IF(LEFT(Shop_Code_Upload__c , 3) = &apos;988&apos;,&apos;线上&apos;, IF(ISNUMBER(Shop_Code_Upload__c),IF( VALUE(Shop_Code_Upload__c) &lt;= 1000, &apos;分拣仓&apos;, &apos;其他&apos;),&apos;其他&apos;)),
&apos;0000511016&apos;, IF(LEFT(Shop_Code_Upload__c , 2) = &apos;99&apos;, &apos;分拣仓&apos;, &apos;其他&apos;),
&apos;0000507925&apos;,&apos;其他&apos;,
&apos;&apos;)

, CASE(Customer__r.SAP_Customer_Code__c,
&apos;0000510468&apos;, &apos;线下数据&apos;,
&apos;0000507684&apos;, &apos;线下数据&apos;,
&apos;0000511016&apos;, &apos;线下数据&apos;,
&apos;0000507925&apos;, &apos;线下数据&apos;,
&apos;&apos;)
)</formula>
    <label>Data Type</label>
    <type>Text</type>
</CustomField>