force-app/main/default/objects/Retail_Number__c/fields/Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Freelancer__c</fullName>
    <label>Freelancer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>