force-app/main/default/objects/Retail_Number__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>