force-app/main/default/objects/Retail_Number__c/fields/GiftQuantity__c.field-meta.xml
<CustomField>
    <fullName>GiftQuantity__c</fullName>
    <label>Gift Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>