force-app/main/default/objects/Retail_Number__c/fields/HasGift__c.field-meta.xml
<CustomField>
    <fullName>HasGift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Gift</label>
    <type>Checkbox</type>
</CustomField>