force-app/main/default/objects/Retail_Number__c/fields/inv_no__c.field-meta.xml
<CustomField>
    <fullName>inv_no__c</fullName>
    <label>Invoice No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>