force-app/main/default/objects/Retail_Number__c/fields/IsSampling__c.field-meta.xml
<CustomField>
    <fullName>IsSampling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sampling</label>
    <type>Checkbox</type>
</CustomField>