force-app/main/default/objects/Retail_Number__c/fields/Kiosk__c.field-meta.xml
<CustomField>
    <fullName>Kiosk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kiosk</label>
    <type>Checkbox</type>
</CustomField>