force-app/main/default/objects/Retail_Number__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <formula>CASESAFEID(PromoterDailyReport__r.OwnerId)</formula>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>