force-app/main/default/objects/Retail_Number__c/fields/Product_500__c.field-meta.xml
<CustomField>
    <fullName>Product_500__c</fullName>
    <formula>Text(Product__r.X500__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 500+</label>
    <type>Text</type>
</CustomField>