force-app/main/default/objects/Retail_Number__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>产品</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (4 AND (5 OR 6)) OR 7</booleanFilter>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ALL_Product_Japan</value>
        </filterItems>
        <filterItems>
            <field>$User.Country__c</field>
            <operation>notEqual</operation>
            <value>South Africa, Indonesia, Chile</value>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>notEqual</operation>
            <value>Hisense South Africa, Hisense Indonesia, Hisense Chile</value>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>RegionalProduct</value>
        </filterItems>
        <filterItems>
            <field>$User.Country__c</field>
            <operation>equals</operation>
            <value>South Africa, Indonesia, Chile,Thailand,Singapore</value>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <value>Hisense South Africa, Hisense Indonesia, Hisense Chile, Hisense Argentina, Hisense West Africa, Hisense Saudi, Hisense Canada, Hisense USA, Hisense Mexico, Hisense Thailand, Hisense Vietnam, Hisense Malaysia,Hisense Philippines,Hisense Peru</value>
        </filterItems>
        <filterItems>
            <field>$Profile.ManageUsers</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Daily Sales (产品)</relationshipLabel>
    <relationshipName>ProductdalH</relationshipName>
    <type>Lookup</type>
</CustomField>