force-app/main/default/objects/Retail_Number__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>