force-app/main/default/objects/Retail_Number__c/fields/ProductBrand__c.field-meta.xml
<CustomField>
    <fullName>ProductBrand__c</fullName>
    <formula>Text(Product__r.Product__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Brand</label>
    <type>Text</type>
</CustomField>