force-app/main/default/objects/Retail_Number__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <formula>Product__r.Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>产品分类</label>
    <type>Text</type>
</CustomField>