force-app/main/default/objects/Retail_Number__c/fields/ProductLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductLevel__c</fullName>
    <formula>Product__r.Middle_High_Low_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Level</label>
    <type>Text</type>
</CustomField>