force-app/main/default/objects/Retail_Number__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>