force-app/main/default/objects/Retail_Number__c/fields/ProductSeries__c.field-meta.xml
<CustomField>
    <fullName>ProductSeries__c</fullName>
    <formula>Product__r.Series__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>产品系列</label>
    <type>Text</type>
</CustomField>