force-app/main/default/objects/Retail_Number__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <label>促销员日报</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipName>RetailNumbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>