force-app/main/default/objects/Retail_Number__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <formula>PromoterDailyReport__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>报告日期</label>
    <type>Date</type>
</CustomField>