force-app/main/default/objects/Retail_Number__c/fields/Reportmonth__c.field-meta.xml
<CustomField>
    <fullName>Reportmonth__c</fullName>
    <formula>MONTH( ReportDate__c )</formula>
    <label>Reportmonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>