force-app/main/default/objects/Retail_Number__c/fields/Reportyear__c.field-meta.xml
<CustomField>
    <fullName>Reportyear__c</fullName>
    <formula>YEAR( ReportDate__c )</formula>
    <label>Reportyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>