force-app/main/default/objects/Retail_Number__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>Daily Sales</relationshipLabel>
    <relationshipName>Daily_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>