force-app/main/default/objects/Retail_Number__c/fields/Sales_Region_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Daily Sales</relationshipLabel>
    <relationshipName>Daily_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>