force-app/main/default/objects/Retail_Number__c/fields/SalesGoal__c.field-meta.xml
<CustomField>
    <fullName>SalesGoal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Goal</label>
    <referenceTo>SalesGoal__c</referenceTo>
    <relationshipName>Daily_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>