force-app/main/default/objects/Retail_Number__c/fields/SameMonth__c.field-meta.xml
<CustomField>
    <fullName>SameMonth__c</fullName>
    <formula>AND(YEAR(PromoterDailyReport__r.Report_Date__c) = YEAR(TODAY()), MONTH(PromoterDailyReport__r.Report_Date__c) = MONTH(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Month</label>
    <type>Checkbox</type>
</CustomField>