force-app/main/default/objects/Retail_Number__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Shop_Retail_Number</relationshipName>
    <type>Lookup</type>
</CustomField>