force-app/main/default/objects/Retail_Number__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IF(!ISBLANK(Shop_Code_Upload__c), &apos;线上&apos;, 
		IF(Customer__r.SAP_Customer_Code__c == &apos;0000507925&apos; &amp;&amp; ISBLANK(Shop_Code_Upload__c), &apos;其他&apos;,
				IF(Shop_Code_Upload__c &lt;= &apos;1000&apos;, &apos;分拣仓&apos;,
							IF(Shop_Code_Upload__c &gt;= &apos;S88&apos;, &apos;线上&apos;, 
							    IF(LEFT(Shop_Code_Upload__c, 3) == &apos;988&apos;, &apos;线上&apos;, 
													IF(LEFT(Shop_Code_Upload__c, 2) ==  &apos;XP&apos;, &apos;展会&apos;,
													    IF(LEFT(Shop_Code_Upload__c, 2) ==  &apos;99&apos;, &apos;分拣仓&apos;, &apos;&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>