force-app/main/default/objects/Retail_Number__c/fields/SPIV__c.field-meta.xml
<CustomField>
    <fullName>SPIV__c</fullName>
    <inlineHelpText>This SPIV is a reference, accurate value and amount will be caulated based on Channel sellout details.</inlineHelpText>
    <label>SPIV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>