force-app/main/default/objects/Retail_Number__c/fields/Stock_In_Transit__c.field-meta.xml
<CustomField>
    <fullName>Stock_In_Transit__c</fullName>
    <description>在途库存</description>
    <label>Stock In Transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>