force-app/main/default/objects/Retail_Number__c/fields/Store_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Store_Sales_Region__c</fullName>
    <formula>IF( ISBLANK( Shop__c ) , TEXT( Customer__r.Sales_Region__c ), TEXT(Shop__r.Sales_Region__c))</formula>
    <label>Store Sales Region</label>
    <type>Text</type>
</CustomField>