force-app/main/default/objects/Retail_Number__c/fields/StoreDelivery__c.field-meta.xml
<CustomField>
    <fullName>StoreDelivery__c</fullName>
    <label>Store Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>