force-app/main/default/objects/Retail_Number__c/fields/Supportable_Days__c.field-meta.xml
<CustomField>
    <fullName>Supportable_Days__c</fullName>
    <label>Supportable Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>