force-app/main/default/objects/Retail_Number__c/fields/Total_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock__c</fullName>
    <formula>Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>