force-app/main/default/objects/Retail_Number__c/validationRules/CanNotEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotEdit</fullName>
    <active>false</active>
    <description>You encountered some errors when trying to save this record

Please note that this Retail Number has been Submitted, no changes are allowed</description>
    <errorConditionFormula>!$Profile.ManageUsers &amp;&amp; Text( PRIORVALUE(Status__c)) == &quot;Submitted&quot;</errorConditionFormula>
    <errorMessage>You encountered some errors when trying to save this record

Please note that this Retail Number has been Submitted, no changes are allowed</errorMessage>
</ValidationRule>