force-app/main/default/objects/Retail_Number__c/validationRules/CHECK_PRO_REPORT.validationRule-meta.xml
<ValidationRule>
    <fullName>CHECK_PRO_REPORT</fullName>
    <active>true</active>
    <description>Promoter Daily Report can not changed.</description>
    <errorConditionFormula>AND( !ISNEW(), ISCHANGED(PromoterDailyReport__c))</errorConditionFormula>
    <errorMessage>Promoter Daily Report can not changed.</errorMessage>
</ValidationRule>