force-app/main/default/objects/Retail_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Shop__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>ReportDate__c</columns>
    <columns>PromoterDailyReport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>