force-app/main/default/objects/Retail_Number__c/listViews/ID_Daily_Sales.listView-meta.xml
<ListView>
    <fullName>ID_Daily_Sales</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Number__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Shop__c</columns>
    <columns>ReportDate__c</columns>
    <columns>Owner__c</columns>
    <columns>PromoterDailyReport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shop__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Indonesia</value>
    </filters>
    <label>ID Daily Sales</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Indonesia_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>